@@ -4,6 +4,7 @@ import com.nyaysetu.backend.config.FileStorageConfig;
 import com.nyaysetu.backend.dto.UploadDocumentResponse;
 import com.nyaysetu.backend.entity.DocumentEntity;
 import com.nyaysetu.backend.entity.DocumentStorageType;
+import com.nyaysetu.backend.entity.DocumentVersion;
 import com.nyaysetu.backend.entity.VisibilityLevel;
 import com.nyaysetu.backend.repository.DocumentRepository;
 import lombok.RequiredArgsConstructor;
@@ -16,6 +17,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
@@ -28,30 +30,40 @@ public class DocumentService {
     private final DocumentRepository documentRepository;
     private final FileStorageConfig fileStorageConfig;
 
-    private static final List<String> ALLOWED_CONTENT_TYPES = Arrays.asList("application/pdf", "image/jpeg",
-            "image/png");
+   private static final List<String> ALLOWED_CONTENT_TYPES =
+       List.of("application/pdf", "image/jpeg", "image/png");
 
     public UploadDocumentResponse save(MultipartFile file, UUID caseId, Long uploadedBy) {
+
         String contentType = file.getContentType();
         if (!ALLOWED_CONTENT_TYPES.contains(contentType)) {
             throw new RuntimeException("Invalid file type. Allowed types: PDF, JPG, PNG");
         }
 
-        String fileName = StringUtils.cleanPath(Objects.requireNonNull(file.getOriginalFilename()));
+        String fileName = StringUtils.cleanPath(
+                Objects.requireNonNull(file.getOriginalFilename())
+        );
+
         if (fileName.contains("..")) {
             throw new RuntimeException("Filename contains invalid path sequence " + fileName);
         }
 
         // Generate unique filename
         String uniqueFileName = UUID.randomUUID().toString() + "_" + fileName;
-        Path targetLocation = Paths.get(fileStorageConfig.getUploadDir()).resolve(uniqueFileName);
+        Path targetLocation = Paths.get(fileStorageConfig.getUploadDir())
+                .resolve(uniqueFileName);
 
         try {
-            Files.copy(file.getInputStream(), targetLocation, StandardCopyOption.REPLACE_EXISTING);
+            Files.copy(
+                    file.getInputStream(),
+                    targetLocation,
+                    StandardCopyOption.REPLACE_EXISTING
+            );
         } catch (IOException e) {
-            throw new RuntimeException("Could not store file " + fileName + ". Please try again!", e);
+            throw new RuntimeException("Could not store file " + fileName, e);
         }
 
+        // Create document entity
         DocumentEntity documentEntity = DocumentEntity.builder()
                 .caseId(caseId)
                 .fileName(uniqueFileName)
@@ -63,6 +75,16 @@ public class DocumentService {
                 .build();
 
         DocumentEntity savedDoc = documentRepository.save(documentEntity);
+
+        // INIT VERSION (first version)
+        savedDoc.getVersions().add(
+                DocumentVersion.builder()
+                        .fileUrl(savedDoc.getFileUrl())
+                        .timestamp(LocalDateTime.now())
+                        .build()
+        );
+
+        documentRepository.save(savedDoc);
 
         return UploadDocumentResponse.builder()
                 .id(savedDoc.getId())
@@ -79,25 +101,42 @@ public class DocumentService {
     public List<DocumentEntity> getDocumentsByCase(UUID caseId) {
         return documentRepository.findByCaseId(caseId);
     }
-    
+
     /**
      * Get documents by case WITH access control based on user's role
-     * @param caseId The case ID
-     * @param userId The requesting user's ID
-     * @param userRole The user's role in this case (JUDGE, PETITIONER, RESPONDENT, LAWYER)
      */
-    public List<DocumentEntity> getDocumentsByCaseWithAccessControl(UUID caseId, Long userId, String userRole) {
+    public List<DocumentEntity> getDocumentsByCaseWithAccessControl(
+            UUID caseId, Long userId, String userRole) {
+
         List<DocumentEntity> allDocuments = documentRepository.findByCaseId(caseId);
-        
+
         return allDocuments.stream()
                 .filter(doc -> hasAccess(doc, userId, userRole))
                 .toList();
     }
-    
-    /**
-     * Check if user has access to a document based on visibility level
-     */
+
     private boolean hasAccess(DocumentEntity doc, Long userId, String userRole) {
+
+        String visibility = doc.getVisibilityLevel() != null
+                ? doc.getVisibilityLevel()
+                : "PUBLIC";
+
+        switch (visibility) {
+
+            case "PUBLIC":
+                return true;
+
+            case "RESTRICTED":
+                if ("JUDGE".equals(userRole)) return true;
+                if (userId.equals(doc.getUploadedBy())) return true;
+                return false;
+
+            case "SEALED":
+                return "JUDGE".equals(userRole);
+
+            default:
+                return false;
+        }
         VisibilityLevel visibility = doc.getVisibilityLevel() != null ? doc.getVisibilityLevel() : VisibilityLevel.PUBLIC;
         
         return switch (visibility) {
@@ -109,6 +148,8 @@ public class DocumentService {
 
     public DocumentEntity getDocument(UUID id) {
         return documentRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Document not found with id " + id));
+                .orElseThrow(() ->
+                        new RuntimeException("Document not found with id " + id)
+                );
     }
 }
